--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body{
 	text-align:center;
 	background: radial-gradient(ellipse at center, rgba(131,234,174,.6) 0%,rgba(145,232,66,.7) 100%); 
 	max-width:99vw;
+	color:#333;
 }
 /*###### TITLE-LOGO NAVBAR  #######*/
 header{
