--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ max-width: 99vw;
 }
 nav{
 	padding-top:2em;
+	transform:rotate(-1deg);
 }
 nav li{
 	display: inline-block;
@@ -237,15 +238,15 @@ h2.destinations{
 		max-width:25em;
 		padding:4em;
 		position:absolute;
-		top:-8em;
-		left:3%;
-		box-shadow: 0px 0px 10px 5px black;
+		top:-11em;
+		left:2%;
+		box-shadow: 0px 0px 10px 5px rgba(9,9,9, .4);
 		z-index: 3;
-		transform: rotate(356deg);
-		transition: transform .5s; /*<.....*/
+		transform: rotate(-4deg) scale(0.9) translateX(-5%);
+		transition: all .5s; /*<.....*/
 	}  									  /**/
 	.home-about-textbox:hover {			  /**/ 
-		transform: rotate(359deg);/* -----| */
+		transform: rotate(1deg);/* -----| */
 	}
 
 	.home-about-textbox h2{
