--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ html{
 }
 body{
 	margin:0;
-	font-family:'consolas','Courier', 'sans-serif';
+/*	font-family:'consolas','Courier', 'sans-serif'; */
 	text-align:center;
 	background: radial-gradient(ellipse at center, rgba(131,234,174,.8) 0%,rgba(145,232,66,.7) 100%); 
 	max-width:99vw;
@@ -30,7 +30,7 @@ img.logo{
 	left:1em;
 	top:.5em;
 	height:auto;
-	opacity:0.7;
+	opacity:.3;
 	border-radius: .2rem;
 	margin:0;
 	padding:0;
@@ -69,6 +69,9 @@ nav a:hover{
 	
 	color:var(--colorblue);
 }
+		h1.first-title{
+			font-family: Bowlby One SC !important;
+		}
 		
 		/*######  HEADER  #######*/
 .home-home{
@@ -76,11 +79,14 @@ nav a:hover{
 	background-size: cover;
 }
 .home-home h1{
-	text-shadow: 0px 0px 2px var(--colorred); 
-	color: white;margin: 4em auto 2em auto;
-    margin-top: 4em;letter-spacing: .2rem;font-family: Century Gothic, CenturyGothic, AppleGothic;
-	mix-blend-mode: exclusion;
+	color: white;
+	margin: 4em auto 2em auto;
+    margin-top: 4em;
+    letter-spacing: .2rem; 
+	font-family: Bowlby One SC; 
+	mix-blend-mode:difference;
 	font-size:5vw;
+	text-shadow: 0px 0px 2px var(--colorred); 
 }
 		/*######  BUTTON-HEADER  #######*/
 .home-home a{
@@ -102,14 +108,25 @@ nav a:hover{
 /*######  ######  MEDIA QUERY HEADER!!  #######   #######*/
 	
 	@media (min-width:60rem){
+		h1.first-title{
+			font-family: Bowlby One SC !important;
+		}
 
 		h1.first-title{
-			font-size:6vw;
-			margin-top:2.5em;
+			font-size:7vw;
+			margin-top:1.5em;
+			margin-bottom:.5em;
 			font-weight: bolder;
  		   	letter-spacing: .1em;
    			word-spacing: 1rem;
+   			color:white;
+   			text-shadow: -2px 2px 2px var(--colorred),
+						-2px -2px 2px var(--colorred),
+						2px 2px 2px var(--colorred),
+						2px -2px 2px var(--colorred);
+			font-family: Bowlby One SC; 
 		}
+
 		img.logo{
 			left:.5em;
 			top:.5em;
@@ -254,23 +271,24 @@ h2.destinations{
 	}
 
 	h2.destinations{
-		font-size:3rem;
+		font-size:4rem;
 		letter-spacing:.1em;
 		word-spacing: .3em;
 	}
 
 	h2.destinations #o1{
-		text-shadow: -1.5em -1em 3px red,
-		             -4px -5px 2px #666,
+		text-shadow: -1.4em -1em 4px red,
+		             -6px -7px 2px #666,
 		             1px 1px 1px #fff;
+	transform:;
 	}
 	h2.destinations #t2{
-		text-shadow: 1em -1.3em 3px green,
-		            1px -3px 2px #666;
+		text-shadow: .3em -.9em 4px darkgreen,
+		            3px -5px 2px #666;
 	}
 	h2.destinations #t3{
-		text-shadow: 4em -1em 2px blue,
-		            5px -3px 2px #666;	
+		text-shadow: 2em -1em 4px blue,
+		            7px -5px 2px #666;	
 	}
 }
 
