--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ html{
 }
 body{
 	margin:0;
-/*	font-family:'consolas','Courier', 'sans-serif'; */
+	font-family:'consolas','Courier', 'sans-serif'; 
 	text-align:center;
 	background: radial-gradient(ellipse at center, rgba(131,234,174,.8) 0%,rgba(145,232,66,.7) 100%); 
 	max-width:99vw;
@@ -83,7 +83,6 @@ nav a:hover{
 	margin: 4em auto 2em auto;
     margin-top: 4em;
     letter-spacing: .2rem; 
-	font-family: Bowlby One SC; 
 	mix-blend-mode:difference;
 	font-size:5vw;
 	text-shadow: 0px 0px 2px var(--colorred); 
@@ -113,10 +112,11 @@ nav a:hover{
 		}
 
 		h1.first-title{
-			font-size:7vw;
-			margin-top:1.5em;
+			font-size:9vw;
+			margin-top:1.2em;
 			margin-bottom:.5em;
 			font-weight: bolder;
+			line-height:1em;
  		   	letter-spacing: .1em;
    			word-spacing: 1rem;
    			color:white;
@@ -124,8 +124,7 @@ nav a:hover{
 						-2px -2px 2px var(--colorred),
 						2px 2px 2px var(--colorred),
 						2px -2px 2px var(--colorred);
-			font-family: Bowlby One SC; 
-		}
+			}
 
 		img.logo{
 			left:.5em;
@@ -144,16 +143,16 @@ nav a:hover{
 			margin: 0;
 		}
 		li.skew{
-			transform: skewX(30deg);
-			margin:0 2em;
-			background: linear-gradient(253deg, rgba(102,210,249,.6) 0%,rgba(102,210,249,.7) 0%,rgba(255,239,183,.6) 32%,rgba(102,210,249,.7) 51%,rgba(255,239,183,.6) 78%,rgba(255,239,183,.6) 100%);
+			transform: skewX(25deg);
+			margin:0 3em;
+			background: linear-gradient(253deg, rgba(102,210,249,.6) 0%,rgba(102,210,249,.7) 50%);
 			display: inline-block;
 			padding:.8em 2em;
 			text-transform: uppercase;
-			border-radius:.4em;
+			border-radius:.7em;
 			color:var(--colorgreen);
 			text-shadow: 1px 1px 2px rgba(9,9,9,.2);
-			box-shadow: 2px -2px 5px 1px rgba(9,9,9,.3);
+			box-shadow: 1px -1px 5px 1px rgba(9,9,20,.2);
 		}
 
 		nav li.skew > a{
@@ -209,7 +208,7 @@ nav a:hover{
 	background-color:var(--colorblue);
 	color:var(--colorgray);
 	padding:2em;
-	outline:2px solid var(--colorgreen); /*outline has also offset, margin not*/
+	outline:2px solid var(--colorskyblue); /*outline has also offset, margin not*/
 	outline-offset:-1.6em;
 	position:relative;
 	opacity: .9;
@@ -219,7 +218,8 @@ nav a:hover{
 	color:var(--colorgreen);
 	position:absolute;
 	margin-top:-1em;
-	background: var(--colorblue);
+	background: var(--colorskyblue);
+	border-radius: 3px;
 	padding:.1em;
 	transform:translateX(-50%);
 	left:50%;
@@ -252,14 +252,22 @@ h2.destinations{
 		
 	}
 	.home-about-textbox{
+		border-radius: 3px;
+		color:blue;
 		max-width:25em;
 		padding:4em;
 		position:absolute;
+		outline-offset:-1.8em;
 		top:-11em;
 		left:2%;
-		box-shadow: 0px 0px 10px 5px rgba(9,9,9, .4);
+		box-shadow: 0px 0px 10px 5px rgba(9,9,9, .3);
 		z-index: 3;
 		transform: rotate(-4deg) scale(0.9) translateX(-5%);
+		background: #f79d00; /* fallback for old browsers */
+  		background: -webkit-linear-gradient(-135deg, #f79d00, #64f38c); /* Chrome 10-25, Safari 5.1-6 */
+  		background: linear-gradient(-135deg, #f79d00, #64f38c); 
+
+
 		transition: all .5s; /*<.....*/
 	}  									  /**/
 	.home-about-textbox:hover {			  /**/ 
@@ -268,27 +276,30 @@ h2.destinations{
 
 	.home-about-textbox h2{
 		top:1.5em;
+		font-size: 1.5rem
 	}
 
 	h2.destinations{
 		font-size:4rem;
 		letter-spacing:.1em;
 		word-spacing: .3em;
+		font-family:Bowlby One SC;
 	}
 
 	h2.destinations #o1{
-		text-shadow: -1.4em -1em 4px red,
-		             -6px -7px 2px #666,
-		             1px 1px 1px #fff;
-	transform:;
+		text-shadow:  -2px -2px 2px #fff,
+		             -15px -15px 2px #666,
+		             -.7em -.6em 4px red;
 	}
 	h2.destinations #t2{
-		text-shadow: .3em -.9em 4px darkgreen,
-		            3px -5px 2px #666;
+		text-shadow:1px -2px 2px #fff,
+		            7px -12px 2px #666,
+		             .2em -.5em 4px darkgreen;
 	}
 	h2.destinations #t3{
-		text-shadow: 2em -1em 4px blue,
-		            7px -5px 2px #666;	
+		text-shadow: 1px -2px 2px #fff,
+		            17px -16px 2px #666,
+		            .7em -.6em 4px blue;
 	}
 }
 
@@ -421,7 +432,7 @@ footer{
 	padding:1rem 0;
 }
 footer span{
-color:#fff;
+color:orange;
 }
 footer .list{
 	width:100%;
