--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ body{
 	font-family:'consolas','Courier', 'sans-serif'; 
 	text-align:center;
 	background: radial-gradient(ellipse at center, rgba(131,234,174,.8) 0%,rgba(145,232,66,.7) 100%); 
-	max-width:99vw;
+	max-width:100vw;
 	color:#333;
+	overflow-x: hidden;
 }
 /*###### TITLE-LOGO NAVBAR  #######*/
 header{
@@ -51,7 +52,7 @@ li.skew{
 	color: orange;
 }
 nav a{
-	background-color:var(--colorgray);
+	background-color:rgba(100,100,100,.6);
 	display: inline-block;
 	padding:.5em;
 	font-weight: 900;
@@ -64,10 +65,14 @@ nav a{
 	text-shadow: 1px 1px 3px var(--colorblue);
 	box-shadow: 0px 0px 3px var(--colorskyblue);
 	transition: all .3s;
+	border-top:-.5em;
+}
+nav ul{
+	margin-top: -.5em;
 }
 nav a:hover{
 	
-	color:var(--colorblue);
+	color:orange;
 }
 		h1.first-title{
 			font-family: Bowlby One SC !important;
@@ -94,8 +99,8 @@ nav a:hover{
 	text-transform: uppercase;
 	padding: .8em 1em;
 	margin-bottom:.5em;
-	color:var(--colorblue);
-	border: 1px solid var(--colorskyblue);
+	color:orange;
+	/*border: 1px solid var(--colorskyblue); */
 	font-weight:900;
 	box-shadow: 0px 0px 3px var(--colorskyblue);
 	border-radius: .4rem;
@@ -112,7 +117,7 @@ nav a:hover{
 		}
 
 		h1.first-title{
-			font-size:9vw;
+			font-size:10vmax;
 			margin-top:1.2em;
 			margin-bottom:.5em;
 			font-weight: bolder;
@@ -171,15 +176,19 @@ nav a:hover{
 			padding:1em 0 8em 0;
 		}
 
-		.home-home a { 
+		.home-home a{
 			position:absolute;
 			margin-top:-1em;
 			top:auto;
 			transform: translateX(-50%);
 			cursor: pointer;
+			font-size:1.5rem;
 			z-index: 2;
-			
+			box-shadow: none;
+			border:none;
+			background-color:rgba(200,255,200,.5);
 		}
+		
 		.home-home a:before{
 			content:'see our work';
 			padding-top:1em;
@@ -189,7 +198,7 @@ nav a:hover{
 			height:100%;
 			width:120%;
 			position:absolute;
-			background-color:white;
+			background-color:rgba(255,245,245,.8);
 			transform:skewX(-15deg);
 			left:-15em;
 			top:0em;
@@ -374,7 +383,7 @@ figcaption p{
 section.pre-footer{
 	padding:3rem 2rem;
 	position:relative;
-	background-color: var(--colorgreen);
+	background-color:var(--colorgreen);
 	font-weight: 300;
 	text-transform: capitalize;
 	position:relative;
@@ -396,7 +405,7 @@ section.pre-footer h4{
 	padding:.5em 2em;
 	color:var(--colorred);
 	border:2px solid var(--colorskyblue);
-	box-shadow: 0px 0px 3px var(--colorblue);
+	box-shadow: 0 0 10px rgba(0,0,0,.5);
 }
 
 @media (min-width: 60em){
@@ -417,7 +426,8 @@ section.pre-footer h4{
 		padding:.8em 3em;
 	}
 	.pre-footer a.button-prefooter:hover{
-		box-shadow: 0 0 10px black;
+		box-shadow: 0 0 10px rgba(0,0,0,.5);
+		background-color:rgba(255,245,245,.8);
 	}
 }
 
