--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body{
 	max-width:100vw;
 	color:#333;
 	overflow-x: hidden;
+	font-family:  'consolas','Courier', 'sans-serif';
 	font-family: Bowlby One SC !important;
 }
 
@@ -97,7 +98,7 @@ nav a:hover{
 }
 
 h1.first-title{
-		font-family: Bowlby One SC !important;
+		font-family: 'Caveat Brush', cursive !important;
 	}
 		/*######  BUTTON-HEADER  #######*/
 .home-home a{
@@ -120,7 +121,7 @@ h1.first-title{
 	
 	@media (min-width:60rem){
 		h1.first-title{
-			font-family: Bowlby One SC !important;
+			font-family: 'Caveat Brush', cursive !important;
 		}
 
 		h1.first-title{
@@ -248,8 +249,9 @@ h1.first-title{
 
 	
 h2.destinations{
-	color:blue;
+	color:rgba(99,99,99,.4);
 	mix-blend-mode: difference;
+	-webkit- mix-blend-mode: difference;
 	margin:0;
 	padding-top: .5em;
 }
@@ -299,6 +301,7 @@ h2.destinations{
 	}
 
 	h2.destinations{
+		
 		font-size:4rem;
 		letter-spacing:.1em;
 		word-spacing: .3em;
@@ -306,19 +309,19 @@ h2.destinations{
 	}
 
 	h2.destinations #o1{
-		text-shadow:  -2px -2px 2px #fff,
-		             -15px -15px 2px #666,
-		             -.7em -.6em 4px red;
+		text-shadow:  -2px -2px 2px #f5e356,
+		             -15px -15px 2px #5f968e,
+		             -.6em -.5em 4px #ffccac;
 	}
 	h2.destinations #t2{
-		text-shadow:1px -2px 2px #fff,
-		            7px -12px 2px #666,
-		             .2em -.5em 4px darkgreen;
+		text-shadow:1px -2px 2px #b3de81,
+		            7px -12px 2px #f34a4a,
+		             .15em -.4em 4px #34888c;
 	}
 	h2.destinations #t3{
-		text-shadow: 1px -2px 2px #fff,
-		            17px -16px 2px #666,
-		            .7em -.6em 4px blue;
+		text-shadow: 1px -2px 2px #fdffff,
+		            17px -16px 2px #6fb98f,
+		            .6em -.5em 4px #e2dfa2;
 	}
 }
 
